WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219447
REGRESSION (
r268075
): Animations at the top of
https://browserbench.org/JetStream/
are very slow
https://bugs.webkit.org/show_bug.cgi?id=219447
Summary
REGRESSION (r268075): Animations at the top of https://browserbench.org/JetSt...
Simon Fraser (smfr)
Reported
2020-12-02 12:00:31 PST
When
https://browserbench.org/JetStream/
loads it shows an animation at the top. That animation is very slow on TOT (it's better in older builds).
Attachments
Testcase
(283 bytes, text/html)
2020-12-03 10:11 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(3.63 KB, patch)
2020-12-05 12:44 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-12-02 12:00:58 PST
<
rdar://problem/71905013
>
Simon Fraser (smfr)
Comment 2
2020-12-02 12:06:40 PST
rdar://problem/71905123
Simon Fraser (smfr)
Comment 3
2020-12-03 10:11:01 PST
Created
attachment 415310
[details]
Testcase This is about animations in SVG images in CSS backgrounds
Simon Fraser (smfr)
Comment 4
2020-12-03 10:12:25 PST
CSS animations in SVG images
Simon Fraser (smfr)
Comment 5
2020-12-05 12:44:39 PST
Created
attachment 415495
[details]
Patch
EWS
Comment 6
2020-12-05 18:47:30 PST
Committed
r270480
: <
https://trac.webkit.org/changeset/270480
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415495
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug