REGRESSION (r268075): Animations at the top of https://browserbench.org/JetStream/ are very slow https://bugs.webkit.org/show_bug.cgi?id=219447 <rdar://problem/71905123>

Reviewed by Sam Weinig.

SVG images have their own Page, and when they request rendering updates, they have to go through
ChromeClient, but that was missing for the Page::renderingUpdateCompleted() code path.
Make scheduleRenderingUpdateInternal() and call it from the two relevant places.

I tried making both a ref test and a test using internals.renderingUpdateCount(), but neither
were reliable. There's no way to get a signal out from the <img src="*.svg"> to say that
the animation has started, requiring tests to have flakey setTimeouts.

* page/Page.cpp:
(WebCore::Page::scheduleRenderingUpdate):
(WebCore::Page::scheduleRenderingUpdateInternal):
(WebCore::Page::renderingUpdateCompleted):
* page/Page.h:


Canonical link: https://commits.webkit.org/232157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270480 268f45cc-cd09-0410-ab3c-d52691b4dbfc